# Kinectv2Opencv

./: CMakeLists.txt  K4Wv2OpenCVModule.cpp  K4Wv2OpenCVModule.h  README.md  cleanUp.m  main.cpp  make_video_original.m
